// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RiskLevel Renders elevated risk correctly. 1`] = `
<span
  style={
    Object {
      "color": "orange",
    }
  }
>
  Elevated
</span>
`;

exports[`RiskLevel Renders highest risk correctly. 1`] = `
<span
  style={
    Object {
      "color": "red",
    }
  }
>
  Highest
</span>
`;

exports[`RiskLevel Renders normal risk correctly. 1`] = `
<span
  style={
    Object {
      "color": "green",
    }
  }
>
  Normal
</span>
`;
